<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <EditText
        android:id="@+id/Username_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/edit_username_reg"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Email_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username_reg"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Password_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_password_reg"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_reg" />

    <EditText
        android:id="@+id/confirm_Password_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_reg" />

    <Button
        android:id="@+id/Register_here_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="Register"
        android:text="@string/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioSex" />

    <TextView
        android:id="@+id/Help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="170dp"
        android:layout_marginRight="170dp"
        android:text="@string/edit_login"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_here_Button" />

    <Button
        android:id="@+id/Login_here_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="170dp"
        android:layout_marginRight="170dp"
        android:background="@null"
        android:onClick="displayLogin"
        android:text="@string/button_login_here"
        android:textAllCaps="false"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Help_text" />

    <RadioGroup
        android:id="@+id/RadioSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:checkedButton="@id/Male_radioButton"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_Password_reg">

        <RadioButton
            android:id="@+id/Male_radioButton"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/button_male" />

        <RadioButton
            android:id="@+id/Female_radioButton"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_female" />

        <RadioButton
            android:id="@+id/Other_radioButton"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_other" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>