<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username" />

    <Button
        android:id="@+id/Login_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="signIn"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <TextView
        android:id="@+id/Help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="170dp"
        android:layout_marginRight="170dp"
        android:text="@string/edit_register"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Button" />

    <Button
        android:id="@+id/Register_here_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="170dp"
        android:layout_marginRight="170dp"
        android:background="@null"
        android:fontFamily="sans-serif"
        android:onClick="displayRegistration"
        android:text="@string/button_register_here"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Help_text" />
</androidx.constraintlayout.widget.ConstraintLayout>